fix margin issue on mobile

--- a/src/components/ProfileCard/AppImgs/styles.css
+++ b/src/components/ProfileCard/AppImgs/styles.css
@@ -10,6 +10,8 @@
   overflow-y: hidden;
   white-space: nowrap;
   width: 100%;
+  margin-top: 8px;
+  -webkit-overflow-scrolling: touch;
 }
 
 .ProfileAppsRow img {
