--- a/src/components/ScreenshotSlider/styles.css
+++ b/src/components/ScreenshotSlider/styles.css
@@ -3,6 +3,7 @@
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
 }
 
 .ScreenshotCol {
